tests/baselines/reference/templateStringUnterminated5.errors.txt
tests/cases/conformance/es6/templates/templateStringUnterminated5.ts(1,8): error TS1160: Unterminated template literal.


==== tests/cases/conformance/es6/templates/templateStringUnterminated5.ts (1 errors) ====
    `\\\\\`
           
!!! error TS1160: Unterminated template literal.